added a comment to the index.html file

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     />
 
     <!-- Connect your css file -->
+    <!-- This is a way to add external style sheets -->
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
